# Unit3Dup-G3MINI

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  unit3dup-wrapper.sh
.github/workflows/: docker-publish.yml
Docker/: dockerfile
common/: bittorrent.py  command.py  extractor.py  mediainfo.py  settings.py  torrent_clients.py  utility.py
common/external_services/: imageHost.py  mediaresult.py
common/external_services/ftpx/: client.py
common/external_services/igdb/: client.py
common/external_services/igdb/core/: api.py
common/external_services/theMovieDB/core/: api.py
common/trackers/: __init__.py  data.py  gemini.py  trackers.py
tests/: __init__.py  contents.py  movieshow.py  video.py  watcher.py
unit3dup/: __main__.py  automode.py  bot.py  duplicate.py  generate_prez.py  media.py  prepared_item.py  prez.py  pvtTorrent.py  pvtTracker.py  pvtVideo.py  release_normalizer.py  state_db.py  torrent.py  upload.py  watcher_state.py
unit3dup/compliance/: __init__.py  scanner.py
unit3dup/media_manager/: ContentManager.py  DocuManager.py  GameManager.py  TorrentManager.py  VideoManager.py  common.py
unit3dup/validators/: __init__.py  encoding_validator.py  naming_validator.py  upload_validator.py
unit3dup/web/: api.py  bbcode_renderer.py  compliance_service.py  main.py  models.py  upload_service.py  views.py
unit3dup/web/static/: style.css
unit3dup/web/templates/: base.html  compliance.html  dashboard.html  history.html  item_detail.html  pending.html  queue.html
unit3dup/web/templates/partials/: compliance_rows.html  compliance_status.html  pending_rows.html  queue_rows.html  stats_bar.html
view/: custom_console.py
(+1 files in other folders)
