[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies", "version"]
name = "Unit3Dup"
description = "An uploader for the Unit3D torrent tracker"
readme = "README.rst"
requires-python = ">=3.10"
license =  "MIT"

authors = [
  { name = "Parzival" }
]

[project.urls]
Homepage = "https://github.com/31December99/Unit3Dup"

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs","http_cache","venv*"]

[tool.setuptools.package-data]
"unit3dup.web" = ["templates/**/*.html", "static/**/*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = "VERSION"}


[project.scripts]
unit3dup = "unit3dup.__main__:main"


